# separability

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.sh  tasks.py  test.py
.github/workflows/: checks.yml
ansible/: dask_setup.yml  dast_teardown.yml  env_vars.yml.template  hosts.ini.template  pull_and_restart_dask.yml
docs/: conf.py  index.rst  modules.rst  seperability.rst
examples/: analyse-methods.ipynb  analyse-models.ipynb  analyse.ipynb  basic_prune.py  bert.ipynb  distributions.ipynb  embeddings.ipynb  example.py  finetune.py  generate_texts.py  ln.py  ln_grows.py  manual_prune.py  mmlu.ipynb  neuron-normalization.ipynb  plot_embeddings.ipynb  prune.sh  prune_30.py  prune_base.py  prune_civil.py  prune_civil.sh  prune_eval_size.py  prune_forsaken.py  prune_heads.py  prune_random.py  prune_toxic.py  ray_prune.py  run_attn_pruning.sh  run_dask.py  run_ff_pruning.sh  run_pruning.sh  run_pythia_attn_pruning.sh  run_pythia_pruning.sh  run_random_pruning.sh  run_tasks.py  separability.ipynb  seperability.ipynb  summaries_open_llama_3b_v2.py  summary_prompt.py  svd_llm.py  (+2 more)
src/: __init__.py  activations.py  data_classes.py  distributions.ipynb  example.py  example_manual_prune.py  main.py  model.py  requirements.txt  seperability.ipynb  texts.py
src/separability/: eval.py  (+13 more)
tests/: run.py  run_tests.py  test_attn_crossover_delete.py  test_attn_utils.py  test_collection.py  test_delete_attn_pre_out_layer.py  test_delete_ff_and_evaluate.py  test_delete_ff_keys.py  test_evaluate_all.py  test_nn_utils.py  test_prune_and_evaluate.py  test_run_data_history.py
(+41 files in other folders)
