[tool.poetry]
name = "separability"
version = "0.9.1"
description = "LLM Tools for looking at separability of LLM Capabilities"
authors = ["Nicky Pochinkov"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/pesvut/separability"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ipykernel = "^6.21.1"
ipywidgets = "^8.0.4"
numpy = "^1.23"
numexpr = "^2.7.0"
torch = "^2.0.1"
tensorboardx = "^2.5.1"
tensorboard = "^2.11.2"
dict-deep = "^4.1.2"
pandas = "^1.5.3"
transformers = "^4.30.0"
tokenizers = "^0.13.3"
sentencepiece = "^0.1.99"
bitsandbytes = "^0.40.2"
scipy = "^1.11.1"
datasets = "^2.9.0"
evaluate = "^0.4.0"
zstandard = "^0.19.0"
welford-torch = "^0.1.2"
einops = "^0.6.0"
matplotlib = "^3.6.3"
wandb = "^0.13.9"
accelerate = "^0.21.0"
celery = "^5.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^0.991"
autopep8 = "^2.0.1"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
